--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Weather App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/style.css">    
 </head>
-<body>
+  <body>
     
+    <navBar class="nav p-4">
 
-    <script src="./scripts/app.js"></script>
-</body>
+        <div class="relative">
+            <div class="searchBar">
+                <input id="searchBar" class="me-0" placeholder="Search for a location" type="text">
+                <img src="./assets/magnifying glass.jpg" alt="a magnifying glass">
+            </div>
+            <div class="previousSearches">
+
+            </div>
+        </div>
+
+    </navBar>
+
+
+<h2>temperature Here</h2>
+<h2>Name Here</h2>
+<img src="" alt="">
+
+    <script type="module" src="./scripts/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
