--- a/index.html
+++ b/index.html
@@ -31,16 +31,12 @@
 
         
 
-          <div class="dropdown">
-            <button class="dropdownBtn btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown button
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+        <div class="dropdown">
+          <button id="dropdownBtn" class="dropbtn">Dropdown</button>
+          <div id="myDropdown" class="dropdown-content">
+           <!-- P tags are gonna be generated here based on favorites -->
           </div>
+        </div>
 
         
 
