--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
           <button id="dropdownBtn" class="dropbtn">Dropdown</button>
           <div id="myDropdown" class="dropdown-content">
            <!-- P tags are gonna be generated here based on favorites -->
+            <!-- un-note these ones to test the dropdown -->
+       <!-- <p>1</p>
+            <p>1</p>
+            <p>1</p> -->
           </div>
         </div>
 
