set up place holders for main display

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       
       <div class="currentTempDisplay">
         <h1>Current weather</h1>
-        <p id="currentTemp">N/A</p>
+        <p id="currentTime">N/A</p>
       </div>
 
       <div class="currentDateDisplay">
-        
+        <span id="day">N/A,</span><span id="date">N/A</span>
       </div>
 
      </div>
