finished (question mark?) the website design

--- a/index.html
+++ b/index.html
@@ -93,23 +93,48 @@
     <div class="d-flex justify-content-evenly">
 
       <div class="forecast-content">
-
+        <h6 id="forecast1Day">N/A</h6>
+        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <div>
+          <h5 id="forcastMax1">N/A</h5>
+          <h4 id="forcastMin1">N/A</h5>
+        </div>
       </div>
 
       <div class="forecast-content">
-
+        <h6 id="forecast1Day">N/A</h6>
+        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <div>
+          <h5 id="forcastMax1">N/A</h5>
+          <h4 id="forcastMin1">N/A</h5>
+        </div>
       </div>
 
       <div class="forecast-content">
-
+        <h6 id="forecast1Day">N/A</h6>
+        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <div>
+          <h5 id="forcastMax1">N/A</h5>
+          <h4 id="forcastMin1">N/A</h5>
+        </div>
       </div>
 
       <div class="forecast-content">
-
+        <h6 id="forecast1Day">N/A</h6>
+        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <div>
+          <h5 id="forcastMax1">N/A</h5>
+          <h4 id="forcastMin1">N/A</h5>
+        </div>
       </div>
 
       <div class="forecast-content">
-
+        <h6 id="forecast1Day">N/A</h6>
+        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <div>
+          <h5 id="forcastMax1">N/A</h5>
+          <h4 id="forcastMin1">N/A</h5>
+        </div>
       </div>
 
       
