startde on backend

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="searchBar">
                 <input id="searchBar" class="me-0" placeholder="Search for location" type="text">
                
-                <img src="./assets/magnifying-glass-18.png" alt="a magnifying glass">
+                <img id="favBtn" src="./assets/magnifying-glass-18.png" alt="a magnifying glass">
                 
             </div>
-            <div class="previousSearches">
+            <div id="favContainer" class="previousSearches">
 
             </div>
         </div>
@@ -63,7 +63,7 @@
       <h1 class="today">Today</h1>
 
       <div class="currentTempDisplay">
-        <img src="" alt="an icon based on the current weather">
+        <img id="currentIcon" src="" alt="an icon based on the current weather">
         <div>
           <h1 id="currentTemp">N/A</h1>
           <h5 id="feelsLike">N/A</h5>
@@ -72,7 +72,7 @@
 
       <div class="minMaxTemp">
 
-        <img src="" alt="an icon based on the current weather">
+        <img id="currentIcon" src="" alt="an icon based on the current weather">
         <div>
           <h1 id="maxTemp">N/A</h1>
           <h5 id="minTemp">N/A</h5>
@@ -102,38 +102,38 @@
       </div>
 
       <div class="forecast-content">
-        <h6 id="forecast1Day">N/A</h6>
-        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <h6 id="forecast2Day">N/A</h6>
+        <img id="forecastImg2" src="" alt="an icon based on the current weather">
         <div>
-          <h5 id="forcastMax1">N/A</h5>
-          <h4 id="forcastMin1">N/A</h5>
+          <h5 id="forcastMax2">N/A</h5>
+          <h4 id="forcastMin2">N/A</h5>
         </div>
       </div>
 
       <div class="forecast-content">
-        <h6 id="forecast1Day">N/A</h6>
-        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <h6 id="forecast3Day">N/A</h6>
+        <img id="forecastImg3" src="" alt="an icon based on the current weather">
         <div>
-          <h5 id="forcastMax1">N/A</h5>
-          <h4 id="forcastMin1">N/A</h5>
+          <h5 id="forcastMax3">N/A</h5>
+          <h4 id="forcastMin3">N/A</h5>
         </div>
       </div>
 
       <div class="forecast-content">
-        <h6 id="forecast1Day">N/A</h6>
-        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <h6 id="forecast4Day">N/A</h6>
+        <img id="forecastImg4" src="" alt="an icon based on the current weather">
         <div>
-          <h5 id="forcastMax1">N/A</h5>
-          <h4 id="forcastMin1">N/A</h5>
+          <h5 id="forcastMax4">N/A</h5>
+          <h4 id="forcastMin4">N/A</h5>
         </div>
       </div>
 
       <div class="forecast-content">
-        <h6 id="forecast1Day">N/A</h6>
-        <img id="forecastImg1" src="" alt="an icon based on the current weather">
+        <h6 id="forecast5Day">N/A</h6>
+        <img id="forecastImg5" src="" alt="an icon based on the current weather">
         <div>
-          <h5 id="forcastMax1">N/A</h5>
-          <h4 id="forcastMin1">N/A</h5>
+          <h5 id="forcastMax5">N/A</h5>
+          <h4 id="forcastMin5">N/A</h5>
         </div>
       </div>
 
