finished the current weather display, trying to figure out the search bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
          <!-- Current -->
         <div class="current">
-          <p class="mb-0 ps-2">N/A</p>
+          <p id="navCurrent" class="mb-0 ps-2">N/A</p>
           <div class="end">
             <img class="me-2" src="./assets/star.png" alt="an empty star">
           </div>
@@ -57,25 +57,26 @@
       </div>
 
       <div class="currentDateDisplay">
-        <span id="day">N/A,</span><span id="date">N/A</span>
+        <span id="day">N/A</span><span id="date"></span>
       </div>
 
       <h1 class="today">Today</h1>
 
       <div class="currentTempDisplay">
-        <img id="currentIcon" src="" alt="an icon based on the current weather">
+        <img id="currentIcon1" src="" alt="an icon based on the current weather">
         <div>
-          <h1 id="currentTemp">N/A</h1>
-          <h5 id="feelsLike">N/A</h5>
+          <h1 id="currentTemp" >N/A</h1>
+          <h5 id="description1">N/A</h5>
         </div>
       </div>
 
       <div class="minMaxTemp">
 
-        <img id="currentIcon" src="" alt="an icon based on the current weather">
+        <img id="currentIcon2" src="" alt="an icon based on the current weather">
         <div>
           <h1 id="maxTemp">N/A</h1>
           <h5 id="minTemp">N/A</h5>
+          <h6 id="description2">N/A</h6>
         </div>
 
       </div>
