started on local storage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="searchBar">
                 <input id="searchBar" class="me-0" placeholder="Search for location" type="text">
                
-                <img id="favBtn" src="./assets/magnifying-glass-18.png" alt="a magnifying glass">
+                <img src="./assets/magnifying-glass-18.png" alt="a magnifying glass">
                 
             </div>
             <div id="favContainer" class="previousSearches">
@@ -28,7 +28,7 @@
         <div class="current">
           <p id="navCurrent" class="mb-0 ps-2">N/A</p>
           <div class="end">
-            <img class="me-2" src="./assets/star.png" alt="an empty star">
+            <img id="favBtn" class="me-2" src="./assets/star.png" alt="an empty star">
           </div>
         </div>
 
@@ -39,7 +39,10 @@
           <div id="myDropdown" class="dropdown-content">
            <!-- P tags are gonna be generated here based on favorites -->
             <!-- un-note these ones to test the dropdown -->
-       <!-- <p>1</p>
+            <!-- <p>1</p>
+            <p>1</p>
+            <p>1</p>
+            <p>1</p>
             <p>1</p>
             <p>1</p> -->
           </div>
