--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./assets/magnifying-glass-18.png" alt="a magnifying glass">
                 
             </div>
-            <div id="favContainer" class="previousSearches">
+            <div id="previousSearches" class="previousSearches">
 
             </div>
         </div>
